# IMP-Server

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: Common.h  ConfigManager.h  HttpParser.h  ImageProcessor.h  Logger.h  Server.h  ThreadPool.h  YOLOv8Detector.h  utils.h
src/: ConfigManager.cpp  HttpParser.cpp  ImageProcessor.cpp  Logger.cpp  Server.cpp  ThreadPool.cpp  YOLOv8Detector.cpp  main.cpp
test/: test_logger  test_logger.cpp
web/: index.html
